# NB28

./: README.md  README2.md  chroma_connect.py  claude  proxy.py  pyproject.toml  requirements.txt  setup.py  test_google_vision.py  test_google_vision2.py  usermanual.md
.github/workflows/: python-package.yml
NB28/: chroma_connect.py  perplexity.py  proxy.py  vector_db_connect.py
tests/: test_basic.py  test_modules.py
