[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nb28"
version = "0.1.0"
description = "NB28 project with vector database connections and proxy"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "suppas55"},
]
dependencies = [
    "chromadb",
    "fastapi",
    "uvicorn",
    "httpx",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "flake8",
]

[tool.setuptools]
packages = ["NB28", "tests"]

[tool.setuptools.package-data]
NB28 = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]